--- a/Tamil Nadu.html
+++ b/Tamil Nadu.html
@@ -94,12 +94,13 @@
 
         <HR>
 
-        <BUTTON ONCLICK="document.location='Project.html'">
+        <BUTTON ONCLICK="document.location='index.html'">
 
             Go to the Home page,
 
         </BUTTON>
         
     </BODY>
+
 
 </HTML>
