--- a/Uttar Pradesh.html
+++ b/Uttar Pradesh.html
@@ -116,12 +116,13 @@
                     
         </H3>
 
-        <BUTTON ONCLICK="document.location='Project.html'">
+        <BUTTON ONCLICK="document.location='index.html'">
 
             Go to the Home page.
 
         </BUTTON>
 
     </BODY>
+
 
 </HTML>
