--- a/Kerala.html
+++ b/Kerala.html
@@ -115,7 +115,7 @@
 
         <BR>
 
-        <BUTTON ONCLICK="document.location='Project.html'">
+        <BUTTON ONCLICK="document.location='index.html'">
 
             Go to the Home Page.
 
@@ -124,5 +124,6 @@
         <HR COLOR = WHITE>
 
     </BODY>
+
 
 </HTML>
