--- a/Kerala.html
+++ b/Kerala.html
@@ -115,7 +115,7 @@
 
         <BR>
 
-        <BUTTON ONCLICK="document.location='index.html'">
+        <BUTTON ONCLICK="document.location=index.html">
 
             Go to the Home Page.
 
@@ -127,3 +127,4 @@
 
 
 </HTML>
+
