--- a/Kerala.html
+++ b/Kerala.html
@@ -115,7 +115,7 @@
 
         <BR>
 
-        <BUTTON ONCLICK="document.location='index.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='index.html'">
 
             Go to the Home Page.
 
@@ -127,5 +127,6 @@
 
 
 </HTML>
+
 
 
