--- a/Tamil Nadu.html
+++ b/Tamil Nadu.html
@@ -94,7 +94,7 @@
 
         <HR>
 
-        <BUTTON ONCLICK="document.location='index.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='index.html'">
 
             Go to the Home page,
 
@@ -104,3 +104,4 @@
 
 
 </HTML>
+
