--- a/Uttar Pradesh.html
+++ b/Uttar Pradesh.html
@@ -116,7 +116,7 @@
                     
         </H3>
 
-        <BUTTON ONCLICK="document.location='index.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='index.html'">
 
             Go to the Home page.
 
@@ -126,3 +126,4 @@
 
 
 </HTML>
+
