--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <BR>
 
-        <BUTTON ONCLICK="document.location='Tamil Nadu.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='Tamil Nadu.html'">
 
             The dance form of Tamil Nadu.
 
@@ -83,7 +83,7 @@
 
         <BR>
         
-        <BUTTON ONCLICK="document.location='Uttar Pradesh.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='Uttar Pradesh.html'">
 
            The dance form of Uttar Pradesh.
 
@@ -93,7 +93,7 @@
 
         <BR>
 
-        <BUTTON ONCLICK="document.location='Kerala.html'">
+        <BUTTON STYLE="width: 200px; height: 50px;" ONCLICK="document.location='Kerala.html'">
 
             The dance form of Kerala.
 
@@ -102,3 +102,4 @@
     </BODY>
 
 </HTML>
+
